<resources>
    <string name="app_name">TestAmarBank</string>
    <string name="title_toolbar">REGISTRATION FORM</string>
    <string name="title_alamat_ktp">Alamat KTP</string>
    <string name="title_content_description">ImageView</string>
    <string name="title_data_diri">Data Diri</string>
    <string name="title_review_data">Review Data</string>
    <string name="title_submit">Submit</string>
    <string name="title_number_3">3</string>
    <string name="title_number_2">2</string>
    <string name="title_number_1">1</string>
    <string name="title_hint_national_id">Enter national id</string>
    <string name="title_label_national_id">National ID</string>
    <string name="title_hint_full_name">Enter full name</string>
    <string name="title_label_full_name">Full Name</string>
    <string name="title_required">(Required)</string>
    <string name="title_hint_date_of_birth">Date of birth</string>
    <string name="title_label_date_of_birth">Date of birth</string>
    <string name="title_hint_bank_account_no">Enter bank account no</string>
    <string name="title_label_bank_account_no">Bank Account No</string>
    <string name="title_hint_education">Education</string>
    <string name="title_label_education">Education</string>
    <string name="title_hint_domicile_addess">Enter domicile address</string>
    <string name="title_label_domicile_addess">Domicile Address</string>
    <string name="title_hint_housing_type">Housing Type</string>
    <string name="title_hint_house_no">Enter house number</string>
    <string name="title_label_house_no">Housing Number</string>
    <string name="title_hint_province">Province</string>
    <string name="title_error_national_id">Please enter your national id</string>
    <string name="title_error_full_name">Please enter your full name</string>
    <string name="title_error_account_no">Please enter your bank account number</string>
    <string name="title_error_education">Please enter your education</string>
    <string name="title_error_date_of_birth">Please enter your date of birth</string>
    <string name="title_error_national_id_16">National ID must 16 digits</string>
    <string name="title_error_account_no_minimum">Bank account number minimum 8 digits</string>
    <string name="title_error_domicile_address">Please enter your domicile address</string>
    <string name="title_error_housing_type">Please enter your housing type</string>
    <string name="title_error_housing_number">Please enter your house number</string>
    <string name="title_error_province">Please enter your province</string>
    <string name="title_error_all_field">Please fill in all the required information to continue</string>
    <string name="title_oke">Oke</string>

</resources>