<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/_60sdp"
            android:fitsSystemWindows="true">

            <TextView
                android:id="@+id/tv_label_data_diri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_section"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/title_data_diri"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_24sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.ujangwahyu.testamarbank.common.uikit.UIKitTextView
                android:id="@+id/tv_national_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_24sdp"
                app:text_label="@string/title_label_national_id"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_data_diri"/>

            <com.ujangwahyu.testamarbank.common.uikit.UIKitTextView
                android:id="@+id/tv_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_24sdp"
                app:text_label="@string/title_label_full_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_national_id"/>

            <com.ujangwahyu.testamarbank.common.uikit.UIKitTextView
                android:id="@+id/tv_bank_account_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_24sdp"
                app:text_label="@string/title_label_bank_account_no"
                app:layout_constraintTop_toBottomOf="@+id/tv_full_name"/>

            <com.ujangwahyu.testamarbank.common.uikit.UIKitTextView
                android:id="@+id/tv_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_24sdp"
                app:text_label="@string/title_label_education"
                app:layout_constraintTop_toBottomOf="@+id/tv_bank_account_no"/>

            <com.ujangwahyu.testamarbank.common.uikit.UIKitTextView
                android:id="@+id/tv_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_24sdp"
                app:text_label="@string/title_label_date_of_birth"
                app:layout_constraintTop_toBottomOf="@+id/tv_education"/>

            <TextView
                android:id="@+id/tv_label_alamat_ktp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_section"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/title_alamat_ktp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_32sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_of_birth"/>

            <com.ujangwahyu.testamarbank.common.uikit.UIKitTextView
                android:id="@+id/tv_domicile_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_24sdp"
                app:text_label="@string/title_label_domicile_addess"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_alamat_ktp"/>

            <com.ujangwahyu.testamarbank.common.uikit.UIKitTextView
                android:id="@+id/tv_housing_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_24sdp"
                app:text_label="@string/title_hint_housing_type"
                app:layout_constraintTop_toBottomOf="@+id/tv_domicile_address"/>

            <com.ujangwahyu.testamarbank.common.uikit.UIKitTextView
                android:id="@+id/tv_housing_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_24sdp"
                app:text_label="@string/title_label_house_no"
                app:layout_constraintTop_toBottomOf="@+id/tv_housing_type"/>

            <com.ujangwahyu.testamarbank.common.uikit.UIKitTextView
                android:id="@+id/tv_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_24sdp"
                app:text_label="@string/title_hint_province"
                app:layout_constraintTop_toBottomOf="@+id/tv_housing_no"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>