<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rounded_white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_submit">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/_60sdp"
                android:fitsSystemWindows="true">

                <TextView
                    android:id="@+id/tv_label_data_diri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_section"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/title_data_diri"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginTop="@dimen/_24sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.ujangwahyu.testamarbank.common.uikit.UIKitEditText
                    android:id="@+id/et_national_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_24sdp"
                    app:field_digits="1234567890"
                    app:field_max_length="16"
                    app:field_hint="@string/title_hint_national_id"
                    app:field_label="@string/title_label_national_id"
                    app:field_show_inline="true"
                    app:field_text_inline="@string/title_required"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_data_diri"/>

                <com.ujangwahyu.testamarbank.common.uikit.UIKitEditText
                    android:id="@+id/et_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_24sdp"
                    app:field_hint="@string/title_hint_full_name"
                    app:field_label="@string/title_label_full_name"
                    app:field_show_inline="true"
                    app:field_max_length="10"
                    app:field_digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM "
                    app:field_text_inline="@string/title_optional"
                    app:layout_constraintTop_toBottomOf="@+id/et_national_id"/>

                <com.ujangwahyu.testamarbank.common.uikit.UIKitEditText
                    android:id="@+id/et_bank_account_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_24sdp"
                    app:field_digits="1234567890"
                    app:field_max_length="20"
                    app:field_hint="@string/title_hint_bank_account_no"
                    app:field_label="@string/title_label_bank_account_no"
                    app:field_show_inline="true"
                    app:field_text_inline="@string/title_required"
                    app:layout_constraintTop_toBottomOf="@+id/et_full_name"/>

                <com.ujangwahyu.testamarbank.common.uikit.UIKitEditText
                    android:id="@+id/et_education"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_24sdp"
                    android:focusable="false"
                    app:field_hint="@string/title_hint_education"
                    app:field_label="@string/title_label_education"
                    app:field_info_icon="true"
                    app:field_show_inline="true"
                    app:field_text_inline="@string/title_required"
                    app:field_info_icon_drawable="@drawable/ic_education"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_bank_account_no" />

                <com.ujangwahyu.testamarbank.common.uikit.UIKitEditText
                    android:id="@+id/et_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_24sdp"
                    android:focusable="false"
                    app:field_hint="@string/title_hint_date_of_birth"
                    app:field_label="@string/title_label_date_of_birth"
                    app:field_info_icon="true"
                    app:field_show_inline="true"
                    app:field_text_inline="@string/title_required"
                    app:field_info_icon_drawable="@drawable/ic_calendar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_education" />

                <FrameLayout
                    android:id="@+id/frame_education"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clickable="true"
                    app:layout_constraintBottom_toBottomOf="@id/et_education"
                    app:layout_constraintEnd_toEndOf="@id/et_education"
                    app:layout_constraintStart_toStartOf="@id/et_education"
                    app:layout_constraintTop_toTopOf="@id/et_education" />

                <FrameLayout
                    android:id="@+id/frame_date_brith"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clickable="true"
                    app:layout_constraintBottom_toBottomOf="@id/et_date_of_birth"
                    app:layout_constraintEnd_toEndOf="@id/et_date_of_birth"
                    app:layout_constraintStart_toStartOf="@id/et_date_of_birth"
                    app:layout_constraintTop_toTopOf="@id/et_date_of_birth" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="@dimen/_53sdp"
            android:background="@drawable/bg_rounded_all_primary"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/title_submit"
            android:layout_margin="@dimen/_24sdp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>